--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -11,11 +11,12 @@
             <a class="navbar-brand" href="/">Анализатор страниц</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a href="#" class="nav-link">Сайты</a></li>
+                    <li class="nav-item"><a href="/urls" class="nav-link">Сайты</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+    {% block sidebar %}{% endblock sidebar %}
     <main class="flex-grow-1">
         <div id="content" class="container-lg mt-3">
             {% block content %}{% endblock %}
