--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -7,21 +7,53 @@
 {% block content %}
 <h1>Сайт: {{url_data.name}}</h1>
 <div class="table-responsive">
-  <table class="table table-bordered table-hover text-nowrap" data-test="url">
+  <table class="table table-bordered table-hover mt-2" data-test="url">
     <tbody>
       <tr>
         <td>ID</td>
-        <td>{{url_data.id}}</td>
+        <td>{{url_data[0].id}}</td>
       </tr>
       <tr>
         <td>Имя</td>
-        <td>{{url_data.name}}</td>
+        <td>{{url_data[0].name}}</td>
       </tr>
       <tr>
         <td>Дата создания</td>
-        <td>{{url_data.created_at}}</td>
+        <td>{{url_data[0].created_at}}</td>
       </tr>
     </tbody>
+  </table>
+</div>
+<h2 class="mt-5 mb-3">Проверки</h2>
+<form method="post" action="{{ url_for('add_and_show_checks', id=url_data[0].id) }}">
+  <input type="submit" class="btn btn-primary" value="Запустить проверку">
+</form>
+<div>
+  <table class="table table-bordered table-hover mt-2" data-test="checks">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Код ответа</th>
+        <th>h1</th>
+        <th>title</th>
+        <th>description</th>
+        <th>Дата создания</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% if all_checks %}
+    {% for check in all_checks %}
+      <tr>
+        <td>{{ check.id }}</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>{{ check.created_at }}</td>
+      </tr>
+    </tbody>
+    {% endfor %}
+    {% endif %}
   </table>
 </div>
 {% endblock %}
