--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -16,7 +16,7 @@
             <tr>
                 <td>{{ url.id }}</td>
                 <td><a href="{{ url_for('show_url', id=url.id )}}">{{ url.name }}</a></td>
-                <td></td>
+                <td>{{ url.latest_check }}</td>
                 <td></td>
             </tr>
         {% endfor %}
