--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -25,7 +25,7 @@
   </table>
 </div>
 <h2 class="mt-5 mb-3">Проверки</h2>
-<form method="post" action="{{ url_for('add_and_show_checks', id=url_data[0].id) }}">
+<form method="post" action="{{ url_for('add_check', id=url_data[0].id) }}">
   <input type="submit" class="btn btn-primary" value="Запустить проверку">
 </form>
 <div>
@@ -45,7 +45,7 @@
     {% for check in all_checks %}
       <tr>
         <td>{{ check.id }}</td>
-        <td></td>
+        <td>{{ check.status_code }}</td>
         <td></td>
         <td></td>
         <td></td>
