--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -17,7 +17,7 @@
                 <td>{{ url.id }}</td>
                 <td><a href="{{ url_for('show_url', id=url.id )}}">{{ url.name }}</a></td>
                 <td>{{ url.latest_check }}</td>
-                <td></td>
+                <td>{{ url.status_code }}</td>
             </tr>
         {% endfor %}
         </tbody>
