--- a/page_analyzer/templates/404.html
+++ b/page_analyzer/templates/404.html
@@ -2,6 +2,6 @@
 {% block content %}
   <h1>Страница не найдена</h1>
   <p>Проверьте корректность адреса</p>
-  <a href="{ url_for('page_analyzer') }">Вернуться на главную</a>
+  <a href="{{ url_for('page_analyzer') }}">Вернуться на главную</a>
 {% endblock %}
 
