--- a/page_analyzer/templates/500.html
+++ b/page_analyzer/templates/500.html
@@ -2,5 +2,5 @@
 {% block content %}
   <h1>Ошибка сервера</h1>
   <p>Извините, попробуте выполнить ваш запрос позже</p>
-  <a href="{ url_for('page_analyzer') }">Вернуться на главную</a>
+  <a href="{{ url_for('page_analyzer') }}">Вернуться на главную</a>
 {% endblock %}
