--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -1,7 +1,15 @@
 {% extends "layout.html" %}
+{% block sidebar %}
+{% if message %}
+<div class="alert alert-{{ message[0][0] }} d-flex" role="alert">{{ message[0][1] }}</div>
+{% endif %}
+{% endblock sidebar %}
 {% block content %}
 <h1>Сайты</h1>
-<div class="table-responsive">
+<form method="post" action="{{ url_for('check_all_urls') }}">
+  <input type="submit" class="btn btn-primary" value="Запустить проверку всех сайтов">
+</form>
+<div class="table-responsive mt-2">
     <table class="table table-bordered table-hover text-nowrap" data-test="urls">
         <thead>
         <tr>
