--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -6,9 +6,9 @@
 {% endblock sidebar %}
 {% block content %}
 <h1>Сайты</h1>
-<form method="post" action="{{ url_for('check_all_urls') }}">
-  <input type="submit" class="btn btn-primary" value="Запустить проверку всех сайтов">
-</form>
+<!--<form method="post" action="{{ url_for('check_all_urls') }}">-->
+<!--  <input type="submit" class="btn btn-primary" value="Запустить проверку всех сайтов">-->
+<!--</form>-->
 <div class="table-responsive mt-2">
     <table class="table table-bordered table-hover text-nowrap" data-test="urls">
         <thead>
